--- a/client/package.json
+++ b/client/package.json
@@ -14,13 +14,12 @@
     "@mui/material": "^6.4.0",
     "@mui/x-data-grid": "^7.23.6",
     "@reduxjs/toolkit": "^2.5.0",
-
     "aws-amplify": "^6.12.1",
-
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "gantt-task-react": "^0.3.9",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
     "numeral": "^2.0.6",
@@ -34,6 +33,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^20.17.13",
     "@types/numeral": "^2.0.5",
     "@types/react": "^19",
