--- a/server/prisma/seedData/project.json
+++ b/server/prisma/seedData/project.json
@@ -52,21 +52,21 @@
     "id": 8,
     "name": "Hotel",
     "description": "Hotel management system overhaul.",
-    "startDate": "2023-03-01T00:00:00Z",
-    "endDate": "2024-01-01T00:00:00Z"
+    "startDate": "2023-03-01T00:00:00Z"
+    
   },
   {
     "id": 9,
     "name": "India",
     "description": "Telecommunication infrastructure upgrade.",
-    "startDate": "2023-06-01T00:00:00Z",
-    "endDate": "2023-12-01T00:00:00Z"
+    "startDate": "2023-06-01T00:00:00Z"
+    
   },
   {
     "id": 10,
     "name": "Juliet",
     "description": "Initiative to enhance cyber-security measures.",
-    "startDate": "2023-07-01T00:00:00Z",
-    "endDate": "2024-02-01T00:00:00Z"
+    "startDate": "2023-07-01T00:00:00Z"
+   
   }
 ]
