--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "gantt-task-react": "^0.3.9",
     "lodash": "^4.17.21",
     "lucide-react": "^0.471.1",
-    "next": "15.1.4",
+    "next": "^15.1.6",
     "numeral": "^2.0.6",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
