--- a/client/package.json
+++ b/client/package.json
@@ -9,21 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-amplify/ui-react": "^6.2.0",
+    "@aws-amplify/auth": "^6.10.2",
+    "@aws-amplify/backend": "^1.14.0",
+    "@aws-amplify/ui-react": "^6.9.1",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.6",
     "@mui/x-data-grid": "^7.12.0",
     "@reduxjs/toolkit": "^2.2.7",
-    "aws-amplify": "^6.5.1",
+    "aws-amplify": "^6.12.3",
     "axios": "^1.7.3",
+    "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "gantt-task-react": "^0.3.9",
     "lodash": "^4.17.21",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
     "numeral": "^2.0.6",
+    "openid-client": "^6.1.7",
     "react": "^18",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
