--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.1",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.10",
     "concurrently": "^9.1.2",
@@ -29,9 +30,12 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "helmet": "^8.0.0",
     "morgan": "^1.10.0",
+    "openid-client": "^5.7.0",
     "prisma": "^6.2.1"
   }
 }
