--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-google-charts": "^5.2.1",
     "react-redux": "^9.2.0",
     "recharts": "^2.15.0",
     "redux-persist": "^6.0.0"
